# homebrew-test-formula

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: generate-hashes.yml  release.yml
