[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "homebrew-test-formula"
description = ""
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Dominik Büttner", email = "mail@db-it.de" }
]
maintainers = [
    { name = "Dominik Büttner", email = "mail@db-it.de" }
]

dependencies = [
]

requires-python = ">= 3.8"

keywords = []

# https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
